Fixed Nav hiding behind images on Discover

--- a/chamber/styles/allPages.css
+++ b/chamber/styles/allPages.css
@@ -258,6 +258,11 @@ header h2
     text-align: center;
 }
 
+nav 
+{
+    z-index: 1;
+}
+
 /* ALL NAVIGATIONS */
 
 nav li #currentPage
