--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -49,6 +49,7 @@
     #menu
     {
         position: fixed;
+        z-index: 2;
         top: 1em;
         left: 1em;   
         background: var(--backgroundColor);
